--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    /> <link
+    /> 
+    <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
